# vulguard

./: .gitattributes  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
tests/: __init__.py  test_cli.py  test_config.py  test_db.py  test_inspector.py  test_report.py  test_retry.py
tests/fixtures/: exception_logging.py  hardcoded_secret.py  logging_payload.py  safe_code.py  sql_injection.py
vulguard/: __init__.py  cli.py  config.ini  config.py  db.py  inspector.py  logging.ini  report.py  retry.py
vulguard/prompts/: system-prompt.md
