[project]
name = "vulguard"
version = "1.1.2"
description = "A lightweight security tool that automatically scans source code for vulnerabilities, highlights risky patterns, and guides developers toward safer implementations to strengthen their applications' overall security posture."
authors = [
    {name = "Ron Webb", email = "ron@ronella.xyz"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"

dependencies = [
    "rich (>=15.0.0,<16.0.0)",
    "click (>=8.0.0,<9.0.0)",
    "logenrich (>=1.0.1,<2.0.0)",
    "env-dir-bootstrap (>=1.0.0,<2.0.0)",
    "github-copilot-sdk (>=1.0.1,<2.0.0)",
    "braincraft (>=1.0.0,<2.0.0)",
]

[project.urls]
Repository = "https://github.com/rcw3bb/vulguard"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "vulguard"}]
include = ["vulguard/logging.ini", "vulguard/config.ini", "vulguard/prompts/system-prompt.md", "CHANGELOG.md"]

[tool.poetry.scripts]
vulguard = "vulguard.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
